--- a/setting.html
+++ b/setting.html
@@ -722,12 +722,7 @@
             </div>
             <div class="input-group">
                 <label data-translate="icon">图标</label>
-                <input type="search" value="${config.icon || ''}" list="icon-list" name="icon" required>
-                <datalist id="icon-list">
-                    <option value="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGU4DoFouNX7OYb16a7XBAx_dXV3OgzcXc7A&s">MPV</option>
-                    <option value="https://images.dwncdn.net/images/t_app-icon-l/p/ab54d4c6-a4d2-11e6-99a6-00163ec9f5fa/1236096272/potplayer-32bit-logo">PotPlayer</option>
-                    <option value="https://upload.wikimedia.org/wikipedia/commons/5/51/IINA_Logo.png">IINA</option>
-                </datalist>
+                <input type="search" value="${config.icon || ''}" name="icon" required>
             </div>
             <div class="input-group">
                 <label data-translate="presetEvent">预设事件</label>
